# mk_sdl2

./: .gitignore  .gitmodules  CMakeLists.txt  FindFreeImage.cmake  README.md
mk_sdl2/: CMakeLists.txt
mk_sdl2/include/mk_sdl2/: sdl2_2d_render_helper.hpp  sdl2_audio_helper.hpp  sdl2_opengl_helper.hpp  sdl2_vulcan_helper.hpp
mk_sdl2/src/: sdl2_2d_render_helper.cpp  sdl2_audio_helper.cpp  sdl2_helpers.cpp  sdl2_opengl_helper.cpp  sdl2_vulcan_helper.cpp
src/: LoadShader.hpp  audio_test.cpp  draw_test.cpp  exercises.cpp  exercises.hpp  main.cc  main.cpp  opengl_helper.cpp  opengl_helper.hpp  renderer.cpp  renderer.hpp  sdl2_audio_helper.cpp  sdl2_audio_helper.hpp  sdl2_helper.cpp  sdl2_helper.hpp  sdl2_helpers.cpp  sdl2_helpers.hpp  sdl2_opengl_helper.cpp  sdl2_opengl_helper.hpp  vulcan_test.cpp
src/mk_graphics/: CMakeLists.txt
src/mk_graphics/include/: opengl_helper.hpp  utility.hpp
src/mk_graphics/src/: opengl_helper.cpp  sdl2_opengl_helper.cpp
test/: CMakeLists.txt  general_tests.cpp
