cmake_minimum_required(VERSION 3.0)

find_package(Boost REQUIRED)
include_directories(${Boost_INCLUDE_DIR})

add_executable(general_tests general_tests.cpp)
set_property(TARGET general_tests PROPERTY CXX_STANDARD 14)
target_link_libraries(general_tests ${Boost_LIBRARIES} mk_graphics)
add_test(NAME general_tests COMMAND general_tests -m HRF --log_level=all --build_info)
